2005-07-19  Shakti Sen <shprasad@novell.com>

	* exchange-permissions-dialog.c (display_role, get_widgets):
	Added a label named 'Custom' to show appropriate role in the 'Role:'
	combo box.

	Fixes bug#310837

2005-07-18  Sarfraaz Ahmed <asarfraaz@novell.com>

	* exchange-folder-size-display.c (parent_destroyed) : This is no longer
	needed. gtk_widget_destroy will take care of destroying it. 
	Fixes #310699
	* exchange-account-setup.c (org_gnome_exchange_settings) : Fixed a 
	warning. Alignment cannot be set for a radio button

2005-07-15  Shakti Sen <shprasad@novell.com>

	* exchange-folder-permission.c: Added the functions 
	org_gnome_exchange_calendar_permissions() and
	org_gnome_exchange_addressbook_permissions() to support 
	'Folder Permissions' for 'Calendar', 'Tasks' and 'Contacts' components.
	Also taken care of a bug #310493.
	* org-gnome-exchange-operations.eplug.in: Added the class hooks.

	Fixes bug#310479.
	Fixes bug#310493 as well.

2005-07-18  Praveen Kumar <kpraveen@novell.com>

	* exchange-account-setup.c (btn_chpass_clicked) : Handle the case
	of user clicking "Cancel" button in "Change Password" dialog. Fixes
	bug 310356.
	(org_gnome_exchange_setting) : Removed the duplicate signal handler
	registered for "Change Password" button.
	
2005-07-16  Sarfraaz Ahmed <asarfraaz@novell.com>

	* exchange-ask-password.c : Removed. Is no longer being used

2005-07-15  Shakti Sen <shprasad@novell.com>

	* Makefile.am: Included the e-foreign-folder-dialog.glade file.
	* e-foreign-folder-dialog.glade: Added newly.

	Fixes bug #310369.

2005-07-14  Sarfraaz Ahmed <asarfraaz@novell.com>

	* exchange-account-setup.c :
	* exchange-calendar.c :
	* exchange-folder-size-display.c :
	* exchange-permissions-dialog.c : Fixed some compile time warnings

2005-07-13  Shakti Sen <shprasad@novell.com>

	* exchange-operations.c: Checked for if the exchange account
	exist/configured.
	* exchange-folder-permission.c: Replaced all the occurences of function