@@ -84,6 +84,7 @@ e_exchange_calendar_get_calendars (ECalSourceType *ftype)
 
 	calendar_list = g_ptr_array_new ();
 
+	exchange_account_rescan_tree (account);
 	folder_array = exchange_account_get_folders (account);
 
 	for (i=0; i<folder_array->len; ++i) {
